<resources>
    <string name="app_name">TickIt</string>
    <string name="search">Search</string>
    <string name="no_results_currently_available">No Results Currently Available</string>
    <string name="find_tickets_near_you">Find Tickets Near You</string>
    <string name="use_my_location">Use My Location</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_events">Events</string>
    <string name="title_favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_map">Map</string>
    <string name="enter_city">Enter A City</string>
    <string name="favorites_preview">Favorites will appear here</string>
    <string name="event_image_content_description">An image of the event</string>
    <string name="favorite">Favorite</string>
    <string name="find_venue">Find Venue</string>
</resources>